[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite_Sheet_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/PlayerSnap.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": false,
"name": "walk_h",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Area2D" type="Area2D" groups=[
"player",
]]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "player"
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "walk_h"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2
collide_with_areas = true

[node name="floorCheck" type="RayCast2D" parent="."]
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
